;; gen1
(executable
  (name gen1)
  (modules gen1))
(rule
  (action
    (with-stdout-to out1.ml.actual (run ./gen1.exe))))
(rule
  (alias runtest)
  (action (diff out1.ml out1.ml.actual)))


;; gen2
(executable
  (name gen2)
  (modules gen2))
(rule
  (action
    (with-stdout-to out2.ml.actual (run ./gen2.exe))))
(rule
  (alias runtest)
  (action (diff out2.ml out2.ml.actual)))


;; gen3
(executable
  (name gen3)
  (modules gen3)
  (libraries ppx_stage.runtime-lib)
  (preprocess (pps ppx_stage.ppx)))
(rule
  (action
    (with-stdout-to out3.ml.actual (run ./gen3.exe))))
(rule
  (alias runtest)
  (action (diff out3.ml out3.ml.actual)))


;; gen4
(executable
  (name gen4)
  (modules gen4)
  (libraries ppxlib))
(rule
  (action
    (with-stdout-to out4.ml.actual (run ./gen4.exe))))
(rule
  (alias runtest)
  (action (diff out4.ml out4.ml.actual)))


;; gen5
(executable
  (name gen5)
  (modules gen5)
  (preprocess (pps ppxlib.metaquot))
  (libraries ppxlib))
(rule
  (action
    (with-stdout-to out5.ml.actual (run ./gen5.exe))))
(rule
  (alias runtest)
  (action (diff out5.ml out5.ml.actual)))


;; gen6
(executable
  (name gen6)
  (modules gen6)
  (preprocess (pps code1_ppx))
  (libraries code1))
(rule
  (action
    (with-stdout-to out6.ml.actual (run ./gen6.exe))))
(rule
  (alias runtest)
  (action (diff out6.ml out6.ml.actual)))

(rule
  (action
    (with-stdout-to gen6.out.ml.actual (run ./../code1/gen/gen.exe ./gen6.ml))))
(rule
  (alias runtest)
  (action (diff gen6.out.ml gen6.out.ml.actual)))
